Sun Jun  4 20:38:58 CEST 2017 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug on linux witg gcc 6.3.0 (or binutils): needs PIC code

Fri Apr  3 10:01:02 CEST 2015 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in findall/4

Tue Feb 17 11:39:11 CET 2015 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in select/5 under Windows

Fri Jan 16 19:25:51 CET 2015 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the compiler

Thu Dec 18 08:59:45 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in read/1
	* fix large address awarenes under cygwin32 (configure.in)

Thu Dec 11 17:18:09 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* improve memory limitation of acyclic_term/1

Tue Dec  9 10:40:18 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* improve term output (write/1 and friends)

Fri Dec  5 02:55:30 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* improve error handling for options (e.g. in write_term/3)

Thu Dec  4 15:47:06 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix bug with cut in the if-part of if-then(-else)
	* fix port to x86_64/OpenBSD
	  (machine kindly provided by Duncan Patton a Campbell)

Wed Dec  3 17:56:54 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug with Apple/Yosemite gcc = LLVM version 6.0 (clang-600.0.56) on x86_64

Fri Aug 22 15:10:18 CEST 2014 <Daniel.Diaz@univ-paris1.fr>

	* allow to define more atoms with MAX_ATOM env var on 64 bits machines

Wed Aug 13 11:25:18 CEST 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in bagof/3 when used as findall/3

Fri Jul 11 17:27:36 CEST 2014 <Daniel.Diaz@univ-paris1.fr>

	* port to sparc64/OpenBSD
	  (machine kindly provided by Duncan Patton a Campbell)

Tue May  6 10:43:33 CEST 2014 <Daniel.Diaz@univ-paris1.fr>

	* add built-in predicate findall/4

Thu Mar  6 16:19:36 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug with linedit when environment variable LINEDIT=no

Wed Feb  5 15:16:37 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix bugs in the FD solver

Fri Nov 22 19:47:45 CET 2013 <Daniel.Diaz@univ-paris1.fr>
