@@ -1770,7 +1770,7 @@ L = [:-,:-,\=,=:=,#>=,#<#,@>=,-->,mod,#>=#,**,*,+,+,',',...]
 
 \subsection{Defining a new C \texttt{main()} function}
 
-GNU Prolog allows the user to define his own \texttt{main()}
+GNU Prolog allows the user to define his own \IdxK{main()}
 function. This can be useful to perform several tasks before starting
 the Prolog engine. To do this simply define a classical
 \texttt{main(argc, argv)} function. The following functions can then be used:
