@@ -99,6 +99,11 @@
    {\end{tabular}}
 
 
+% \newenvironment{CmdOptions}%
+%    {\begin{tabularx}{\textwidth}{p{4cm}X}}%
+%    {\end{tabularx}}
+
+
 \newenvironment{ItemizeThreeCols}%
    {\begin{multicols}{3}\raggedcolumns\begin{itemize}}%
    {\end{itemize}\end{multicols}\SkipUp}
