@@ -51,10 +51,15 @@ q :-
 
 
 problem(1, 32, 33, [18, 15, 14, 10, 9, 8, 7, 4, 1]).
+
 problem(2, 65, 47, [25, 24, 23, 22, 19, 17, 11, 6, 5, 3]).
+
 problem(3, 112, 112, [50, 42, 37, 35, 33, 29, 27, 25, 24, 19, 18, 17, 16, 15, 11, 9, 8, 7, 6, 4, 2]).
+
 problem(4, 175, 175, [81, 64, 56, 55, 51, 43, 39, 38, 35, 33, 31, 30, 29, 20, 18, 16, 14, 9, 8, 5, 4, 3, 2, 1]).
+
 problem(5, 479, 479, [175, 174, 164, 160, 155, 150, 140, 130, 86, 77, 68, 60, 52, 44, 43, 35, 29, 28, 26, 24, 23, 17, 6, 5]).
+
 problem(6, 655, 655, [288, 246, 216, 215, 194, 193, 173, 152, 151, 86, 84, 83, 65, 57, 54, 53, 51, 40, 31, 26, 25, 21, 15, 14, 10]).
 
 
@@ -62,9 +67,9 @@ problem(6, 655, 655, [288, 246, 216, 215, 194, 193, 173, 152, 151, 86, 84, 83, 6
 
 problem(-1, 112, 112, [50, 42, 37, 35, 33, 29, 27, 25, 24, 19, 18, 17, 16, 15, 11, 9, 8, 7, 6, 4, 2]).
 
-problem(-4, 479, 479, [175,174,164,160,155,150,140,130,86,77,68,60,52,44,43,35,29,28,26,24,23,17,6,5]).
+problem(-4, 479, 479, [175, 174, 164, 160, 155, 150, 140, 130, 86, 77, 68, 60, 52, 44, 43, 35, 29, 28, 26, 24, 23, 17, 6, 5]).
 
-problem(-5, 524, 524, [220,164,163,159,145,141,135,132,125,101,98,90,87,62,61,55,54,39,37,35,33,21,20,12,9]).
+problem(-5, 524, 524, [220, 164, 163, 159, 145, 141, 135, 132, 125, 101, 98, 90, 87, 62, 61, 55, 54, 39, 37, 35, 33, 21, 20, 12, 9]).
 
 
 
