@@ -1,3 +1,7 @@
+Fri Jan 12 17:01:53 CET 2018 <Daniel.Diaz@univ-paris1.fr>
+
+	* add gplc option --new-top-level (add top-level command-line option handling)
+
 Sun Jun  4 20:38:58 CEST 2017 <Daniel.Diaz@univ-paris1.fr>
 
 	* fix a bug on linux witg gcc 6.3.0 (or binutils): needs PIC code
